Создано с помощью Colaboratory

--- a/MedRecords.ipynb
+++ b/MedRecords.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJlJAeP7tQfMnALys7V9eA",
+      "authorship_tag": "ABX9TyNnWRsZLo+TFGNE5Dj4M9du",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2145,6 +2145,69 @@
           "execution_count": 188
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import dash_table\n"
+      ],
+      "metadata": {
+        "id": "fyLeXNkA5f5m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from flask import Flask\n",
+        "import dash_table\n",
+        "import dash\n",
+        "\n",
+        "server = Flask(__name__)\n",
+        "\n",
+        "@server.route('/')\n",
+        "def hello_world():\n",
+        "return 'Hello World!'\n",
+        "\n",
+        "DataFrame = df\n",
+        "\n",
+        "app = dash.Dash(\n",
+        "__name__,\n",
+        "server=server,\n",
+        "routes_pathname_prefix='/dash/')\n",
+        "\n",
+        "app.layout = dash_table.DataTable(\n",
+        "id = \"table\",\n",
+        "data=DataFrame.to_dict('records'),\n",
+        "columns=[{'id': c, 'name': c} for c in DataFrame.columns],\n",
+        "page_action='none',\n",
+        "style_table={'height': '300px', 'overflowY': 'auto'}\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "dLLdwdqg5hiB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0O4rESPh6ipM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "f_I5rNVY5v-0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
