Создано с помощью Colaboratory

--- a/MedRecords.ipynb
+++ b/MedRecords.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnWRsZLo+TFGNE5Dj4M9du",
+      "authorship_tag": "ABX9TyPDxI0UwRy8aR/QidHKy6XK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2149,6 +2149,49 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install Dash"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IdvbWiOW61MR",
+        "outputId": "418b9eef-7917-4af5-a4e7-1b686b72ca7b"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting Dash\n",
+            "  Downloading dash-2.7.1-py3-none-any.whl (9.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 9.9 MB 26.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: plotly>=5.0.0 in /usr/local/lib/python3.8/dist-packages (from Dash) (5.5.0)\n",
+            "Collecting dash-html-components==2.0.0\n",
+            "  Downloading dash_html_components-2.0.0-py3-none-any.whl (4.1 kB)\n",
+            "Collecting dash-table==5.0.0\n",
+            "  Downloading dash_table-5.0.0-py3-none-any.whl (3.9 kB)\n",
+            "Requirement already satisfied: Flask>=1.0.4 in /usr/local/lib/python3.8/dist-packages (from Dash) (1.1.4)\n",
+            "Collecting dash-core-components==2.0.0\n",
+            "  Downloading dash_core_components-2.0.0-py3-none-any.whl (3.8 kB)\n",
+            "Requirement already satisfied: click<8.0,>=5.1 in /usr/local/lib/python3.8/dist-packages (from Flask>=1.0.4->Dash) (7.1.2)\n",
+            "Requirement already satisfied: itsdangerous<2.0,>=0.24 in /usr/local/lib/python3.8/dist-packages (from Flask>=1.0.4->Dash) (1.1.0)\n",
+            "Requirement already satisfied: Werkzeug<2.0,>=0.15 in /usr/local/lib/python3.8/dist-packages (from Flask>=1.0.4->Dash) (1.0.1)\n",
+            "Requirement already satisfied: Jinja2<3.0,>=2.10.1 in /usr/local/lib/python3.8/dist-packages (from Flask>=1.0.4->Dash) (2.11.3)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.8/dist-packages (from Jinja2<3.0,>=2.10.1->Flask>=1.0.4->Dash) (2.0.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from plotly>=5.0.0->Dash) (1.15.0)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.8/dist-packages (from plotly>=5.0.0->Dash) (8.1.0)\n",
+            "Installing collected packages: dash-table, dash-html-components, dash-core-components, Dash\n",
+            "Successfully installed Dash-2.7.1 dash-core-components-2.0.0 dash-html-components-2.0.0 dash-table-5.0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import dash_table\n"
       ],
       "metadata": {
@@ -2168,7 +2211,7 @@
         "\n",
         "@server.route('/')\n",
         "def hello_world():\n",
-        "return 'Hello World!'\n",
+        "  return 'Hello World!'\n",
         "\n",
         "DataFrame = df\n",
         "\n",
