Создано с помощью Colaboratory

--- a/MedRecords.ipynb
+++ b/MedRecords.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ9n1dJR5UhESynSWOvMX4",
+      "authorship_tag": "ABX9TyOPSHPlLO22x/LDHG0CKLGv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8037,6 +8037,17 @@
           "execution_count": 45
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv(r'C:\\Users\\eizagoruiko\\Desktop')"
+      ],
+      "metadata": {
+        "id": "Ksh1bqL7V60Q"
+      },
+      "execution_count": 49,
+      "outputs": []
     }
   ]
 }
