Создано с помощью Colaboratory

--- a/MedRecords.ipynb
+++ b/MedRecords.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPSHPlLO22x/LDHG0CKLGv",
+      "authorship_tag": "ABX9TyNXHnoPPHOtA1Cs76j6663t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8041,12 +8041,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(r'C:\\Users\\eizagoruiko\\Desktop')"
+        "df.to_csv('/content/sample_data/mtsamples_processed.csv')"
       ],
       "metadata": {
         "id": "Ksh1bqL7V60Q"
       },
-      "execution_count": 49,
+      "execution_count": 53,
       "outputs": []
     }
   ]
